Fix alignment of todo count in Inbox

--- a/src/app/todos/todo-lists/todo-list-item/todo-list-item.component.css
+++ b/src/app/todos/todo-lists/todo-list-item/todo-list-item.component.css
@@ -7,6 +7,10 @@ a:hover .fa-pencil {
   visibility: visible;
 }
 
+a:hover .fa-pencil.uneditable {
+  visibility: hidden;
+}
+
 a:hover .fa-pencil:hover {
   color: #999999;
 }
